syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

service UserService {
  rpc FindMany (FindManyQuery) returns (FindManyResponse);
  rpc FindFirst (FindFirstQuery) returns (User);
  rpc Create (CreateOneUserArgs) returns (User);
  rpc Update (UpdateOneUserArgs) returns (User);
}

message UpdateOneUserArgs {
  UserUpdateInput data = 1;
  UserWhereUniqueInput where = 2;
}

message UserUpdateInput {
  NullableStringFieldUpdateOperationsInput refreshToken = 1;
}

message NullableStringFieldUpdateOperationsInput {
  string set = 1;
}

message UserWhereUniqueInput {
  string id = 1;
}

message CreateOneUserArgs {
  UserCreateInput data = 1;
}

message UserCreateInput {
  string name = 1;
  string provider = 2;
  string providerId = 3;
  string email = 4;
}


message FindFirstQuery {
  UserWhereInput where = 1;
}

message UserWhereInput {
  Filter provider = 1;
  Filter providerId = 2;
}

message Filter {
  string equals = 1;
}

message FindManyQuery {
  int32 take = 1;
}

message FindManyResponse {
  repeated User values = 1;
}

message User {
  optional string id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional bool deleted = 4;
  optional string name = 5;
}
